# citation-check

./: .gitignore  AGENTS.md  README.md  compose.yaml  implementation-plan.md  pyproject.toml
src/citation_check/: cli.py  grobid.py  matcher.py  models.py  report.py  verifier.py
src/citation_check/clients/: __init__.py  crossref.py  openalex.py  semantic_scholar.py
tests/: test_cli.py  test_crossref.py  test_edge_cases.py  test_grobid.py  test_matcher.py  test_models.py  test_openalex.py  test_report.py  test_semantic_scholar.py  test_verifier.py
