[project]
name = "citation-check"
version = "0.1.0"
description = "Verify citations in academic papers against Crossref, Semantic Scholar, and OpenAlex"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "rapidfuzz>=3.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
citation-check = "citation_check.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.11",
]
